# PandaIK

./: Cargo.toml  constraints.yaml  sym.py
src/: main.rs  robot.rs
src/robot/: constraints.rs  ik.rs  state.rs
