[package]
name = "panda_ik"
version = "0.1.0"
authors = ["Kevin Welsh <kevinwelsh132@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
optimization_engine = "0.6.0"
nalgebra = "0.26"
k = "0.25"

[profile.release]
opt-level = 3